--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,2 +1,5 @@
-<nav class="main-nav">
-</nav>
+<img class="message" src="/assets/bell.svg" alt="message">
+
+<button>
+    <img class="profile-img" src="/assets/profile.svg" alt="">
+</button>
