--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,7 +45,7 @@ h1, h2, h3 {
 app-header {
     display: block;
     margin: .0625rem .0625rem 0 .0625rem;
-    height: 2.5rem;
+    height: 3.5rem;
     border-right: 1px solid var(--border-color);
     border-bottom: 1px solid var(--border-color);
 }
@@ -66,3 +66,10 @@ app-customers {
     padding: 0 1rem 1rem 1rem;
 }
 
+app-header {
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 1rem;
+}
