navbar with icons

--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -5,21 +5,38 @@
     </a> 
   </li>
   <li>
-    <button routerLink="/kunden" routerLinkActive="active">Alle Kunden</button>
+    <button routerLink="/kunden" routerLinkActive="active">
+      <img width="25" height="25" src="./assets/customers.svg" alt="">
+      Alle Kunden
+    </button>
   </li>
 
   <li>
-    <img src="" alt="">
-    <button routerLink="/bewerbungen" routerLinkActive="active">Bewerbungen</button>
+    <button routerLink="/bewerbungen" routerLinkActive="active">
+      <img width="25" height="25" src="./assets/applies.svg" alt="">
+      Bewerbungen
+    </button>
   </li>
   
   <li>
-    <img src="" alt="">
-    <button routerLink="/rechnungen" routerLinkActive="active">Rechnungen</button>
+    <button routerLink="/rechnungen" routerLinkActive="active">
+      <img width="25" height="25" src="./assets/invoices.svg" alt="">
+      Rechnungen
+    </button>
   </li>
 
   <li>
-    <img src="" alt="">
-    <button routerLink="/neu-kunde" routerLinkActive="active">Neuer Kunden</button>
+    <button routerLink="/neu-kunde" routerLinkActive="active">
+      <img width="25" height="25" src="./assets/add-customer.svg" alt="">
+      Neuer Kunden
+    </button>
   </li>
+
+  <li>
+    <button routerLink="/einstellungen" routerLinkActive="active">
+      <img width="25" height="25" src="./assets/settings.svg" alt="">
+      Einstellungen
+    </button>
+  </li>
+
 </ul>
