--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,14 +45,14 @@ h1, h2, h3 {
 app-header {
     display: block;
     margin: .0625rem .0625rem 0 .0625rem;
-    height: 3.5rem;
+    height: 4.5rem;
     border-right: 1px solid var(--border-color);
     border-bottom: 1px solid var(--border-color);
 }
 
 app-navbar {
     height: 100%;
-    width: 192px;
+    width: 15rem;
     background: #ffff;
     border-right: 1px solid var(--border-color);
 }
