--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,5 +1,5 @@
-<img class="message" src="/assets/bell.svg" alt="message">
+<img width="45px" height="45px" class="message" src="/assets/bell.svg" alt="Nachrichten">
 
 <button>
-    <img class="profile-img" src="/assets/profile.svg" alt="">
+    <img width="40px" height="40px" class="profile-img" src="/assets/profile.svg" alt="Profile">
 </button>
