dashboard first view

--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -1,8 +1,20 @@
 <ul>
   <li>
-      <a href="/" class="logo">
-        <img src="./assets/SK-logo.svg" alt="Start in Krypto">
+    <a href="/" class="logo">
+      <img width="170" height="40" src="./assets/SK-logo.svg" alt="Start in Krypto">
     </a> 
+  </li>
+  <li>
+    <button routerLink="/dashboard" routerLinkActive="active">
+      <img width="25" height="25" src="./assets/dashboard.svg" alt="">
+      Dashboard
+    </button>
+  </li>
+  <li>
+    <button routerLink="/neu-kunde" routerLinkActive="active">
+      <img width="25" height="25" src="./assets/add-customer.svg" alt="">
+      Neuer Kunde
+    </button>
   </li>
   <li>
     <button routerLink="/kunden" routerLinkActive="active">
@@ -25,12 +37,6 @@
     </button>
   </li>
 
-  <li>
-    <button routerLink="/neu-kunde" routerLinkActive="active">
-      <img width="25" height="25" src="./assets/add-customer.svg" alt="">
-      Neuer Kunden
-    </button>
-  </li>
 
   <li>
     <button routerLink="/einstellungen" routerLinkActive="active">
