--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,11 +52,13 @@ app-header {
 
 app-navbar {
     height: 100%;
-    width: 15rem;
+    width: 20rem;
     background: #ffff;
     border-right: 1px solid var(--border-color);
+    font-size: 1.25rem;
 }
 
+app-dashboard,
 app-apply,
 app-newcustomer,
 app-invoices,
