--- a/src/app/dashboard/dashboard.scss
+++ b/src/app/dashboard/dashboard.scss
@@ -48,10 +48,11 @@
             align-items: center;
             margin-block: 1rem;
             h2 {
-                font-size: .9375rem;
+                font-size: 1rem;
             }
             span {
                 font-weight: 400;
+                font-size: .9rem;
             }
         }
         ul {
