daschboard first verison ready

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -4,7 +4,7 @@
     <div class="dashboard-single">
         <div>
             <h2>Alle Kunden</h2>
-            <span class="dashboard-number">1,250</span>
+            <span class="dashboard-number">6</span>
         </div>
         <span class="dashboard-img">
             <img width="25" height="25" src="./assets/customers.svg" alt="">
@@ -14,7 +14,7 @@
     <div class="dashboard-single">
         <div>
             <h2>Alle Rechnungen</h2>
-            <span class="dashboard-number">1,250</span>
+            <span class="dashboard-number">135</span>
         </div>
             <span class="dashboard-img">
             <img width="25" height="25" src="./assets/invoices.svg" alt="">
@@ -24,7 +24,7 @@
     <div class="dashboard-single">
         <div>
             <h2>Alle Bewerbungen</h2>
-            <span class="dashboard-number">1,250</span>
+            <span class="dashboard-number">25</span>
         </div>
         <span class="dashboard-img">
             <img width="25" height="25" src="./assets/applies.svg" alt="">
@@ -45,47 +45,47 @@
         <ul>
             <li>
                 <button>
-                    <div class="name-email">
+                    <div class="dashboard-list-single">
                         <h3>
-                            Damian Poloczek
+                            Jozef Stary
                         </h3>
                         <span>
-                            damianpoloczek@gmail.com
+                            jozefstary@gmail.com
                         </span>
                     </div>
-                    <span>
-                        status
+                    <span class="dashboard-list-status standart">
+                        standart
                     </span>
                 </button>
             </li>
 
             <li>
                 <button>
-                    <div class="name-email">
+                    <div class="dashboard-list-single">
                         <h3>
-                            Damian Poloczek
+                            Kinga Mloda
                         </h3>
                         <span>
-                            damianpoloczek@gmail.com
+                            kingamloda@gmail.com
                         </span>
                     </div>
-                    <span>
-                        status
+                    <span class="dashboard-list-status optional">
+                        optional
                     </span>
                 </button>
             </li>
             <li>
                 <button>
-                    <div class="name-email">
+                    <div class="dashboard-list-single">
                         <h3>
-                            Damian Poloczek
+                            Anne Heller
                         </h3>
                         <span>
-                            damianpoloczek@gmail.com
+                            AnnaHeller@gmail.com
                         </span>
                     </div>
-                    <span>
-                        status
+                    <span class="dashboard-list-status premium">
+                        premium
                     </span>
                 </button>
             </li>
@@ -103,47 +103,65 @@
         <ul>
             <li>
                 <button>
-                    <div class="name-email">
+                    <div class="dashboard-list-single">
                         <h3>
-                            Damian Poloczek
+                            #1234567
                         </h3>
                         <span>
-                            damianpoloczek@gmail.com
+                            Jozef Stary
+                        </span>
+                        <span>
+                            -
+                        </span>
+                        <span>
+                            500€
                         </span>
                     </div>
-                    <span>
-                        status
+                    <span class="dashboard-list-status paid">
+                        bezahlt
                     </span>
                 </button>
             </li>
 
             <li>
                 <button>
-                    <div class="name-email">
+                    <div class="dashboard-list-single">
                         <h3>
-                            Damian Poloczek
+                            #1234567
                         </h3>
                         <span>
-                            damianpoloczek@gmail.com
+                            Kinga Mloda
+                        </span>
+                        <span>
+                            -
+                        </span>
+                        <span>
+                            500€
                         </span>
                     </div>
-                    <span>
-                        status
+                    <span class="dashboard-list-status unpaid">
+                        unbezahlt
                     </span>
                 </button>
             </li>
             <li>
                 <button>
-                    <div class="name-email">
+                    <div class="dashboard-list-single">
                         <h3>
-                            Damian Poloczek
+                            #1234567
                         </h3>
                         <span>
-                            damianpoloczek@gmail.com
+                            Anne Heller
+                        </span>
+                        <span>
+                            -
+                        </span>
+                        <span>
+                            500€
                         </span>
                     </div>
-                    <span>
-                        status
+                    <span class="dashboard-list-status paid">
+                        bezahlt
                     </span>
                 </button>
             </li>
@@ -161,47 +179,65 @@
         <ul>
             <li>
                 <button>
-                    <div class="name-email">
+                    <div class="dashboard-list-single">
                         <h3>
-                            Damian Poloczek
+                            BEW6541235
                         </h3>
                         <span>
-                            damianpoloczek@gmail.com
+                            Alek Wysoki
+                        </span>
+                        <span>
+                            -
+                        </span>
+                        <span>
+                            14.10.2025
                         </span>
                     </div>
-                    <span>
-                        status
+                    <span class="dashboard-list-status approved">
+                        angenommen
                     </span>
                 </button>
             </li>
 
             <li>
                 <button>
-                    <div class="name-email">
+                    <div class="dashboard-list-single">
                         <h3>
-                            Damian Poloczek
+                            BEW1234564
                         </h3>
                         <span>
-                            damianpoloczek@gmail.com
+                            Alek Wysoki
+                        </span>
+                        <span>
+                            -
+                        </span>
+                        <span>
+                            14.10.2025
                         </span>
                     </div>
-                    <span>
-                        status
+                    <span class="dashboard-list-status pending">
+                        ausstehend
                     </span>
                 </button>
             </li>
             <li>
                 <button>
-                    <div class="name-email">
+                    <div class="dashboard-list-single">
                         <h3>
-                            Damian Poloczek
+                            BEW1234567
                         </h3>
                         <span>
-                            damianpoloczek@gmail.com
+                            Ewa Potok
+                        </span>
+                        <span>
+                            -
+                        </span>
+                        <span>
+                            14.10.2025
                         </span>
                     </div>
-                    <span>
-                        status
+                    <span class="dashboard-list-status rejected">
+                        absage
                     </span>
                 </button>
             </li>
