--- a/src/app/dashboard/dashboard.scss
+++ b/src/app/dashboard/dashboard.scss
@@ -1,7 +1,7 @@
 
 .dashboard-statistics {
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
     .dashboard-single {
         display: flex;
         justify-content: space-between;
@@ -36,7 +36,7 @@
 
 .dashboard-list-container {
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
     margin-top: 1rem;
     .dashboard-list {
         display: flex;
@@ -74,6 +74,7 @@
                         line-height: 1.2;
                         h3 {
                             font-size: 1rem;
+                            font-weight: 600;
                         }
                         span {
                             font-size: .8rem;
