--- a/src/app/dashboard/dashboard.scss
+++ b/src/app/dashboard/dashboard.scss
@@ -14,6 +14,7 @@
         h2 {
             color: var(--secondary);
             font-size: 1rem;
+            font-weight: 600;
         }
         .dashboard-number {
             font-size: 2.5rem;
@@ -49,6 +50,7 @@
             margin-block: 1rem;
             h2 {
                 font-size: 1rem;
+                font-weight: 600;
             }
             span {
                 font-weight: 400;
