algorithmus first view

--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -37,6 +37,13 @@
     </button>
   </li>
 
+    <li>
+    <button routerLink="/algorithmus" routerLinkActive="active">
+      <img width="25" height="25" src="./assets/algorithm.svg" alt="">
+      Algorithmus
+    </button>
+  </li>
+
 
   <li>
     <button routerLink="/einstellungen" routerLinkActive="active">
