--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,6 @@ body {
 main {
     display: flex;
     margin: 0 .0625rem .0625rem .0625rem;
-    height: 100vh;
 }
 
 .main-content {
@@ -51,7 +50,9 @@ app-header {
 }
 
 app-navbar {
-    height: 100%;
+    position: sticky;
+    top: 0;
+    height: 100vh;
     width: 20rem;
     background: #ffff;
     border-right: 1px solid var(--border-color);
