--- a/src/app/algorithmus/algorithmus.scss
+++ b/src/app/algorithmus/algorithmus.scss
@@ -2,7 +2,8 @@ form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  max-width: 420px;
+  max-width: 26.25rem;
+  margin-bottom: 1rem;
 }
 
 .error {
@@ -120,7 +121,7 @@ section {
   gap: 1rem;
   dt {
     float: left;
-    width: 50%;
+    width: 18.75rem;
     padding: 0;
     margin: 0;
   }
