--- a/src/app/algorithmus/algorithmus.html
+++ b/src/app/algorithmus/algorithmus.html
@@ -71,8 +71,8 @@
     Zusammenfassung
   </h2>
   <dl>
-        <dt>Grundgebühr</dt>
-    <dd>{{basicFeeProvision | number:'1.2-2'}} €</dd>
+        <dt class="first-part">Grundgebühr</dt>
+    <dd class="first-part">{{basicFeeProvision | number:'1.2-2'}} €</dd>
         <dt>Individuelle Express Krypto-Einführung</dt>
     <dd>{{firstStepAmount | number:'1.2-2'}} €</dd>
         <dt>Börsenwahl & Einrichtung</dt>
