--- a/src/app/algorithmus/algorithmus.scss
+++ b/src/app/algorithmus/algorithmus.scss
@@ -134,4 +134,8 @@ section {
     height: 1rem;
     background-color: var(--border-color);
   }
+  .first-part {
+    position: relative;
+    margin-bottom: 1rem;
+  }
 }
