new component algorithmus in settings and settings routing

--- a/src/app/settings/settings.html
+++ b/src/app/settings/settings.html
@@ -1,1 +1,13 @@
 <h1 class="title">Einstellungen</h1>
+
+<ul>
+    <li>
+    <button routerLink="algorithmus" routerLinkActive="active">
+      <img width="25" height="25" src="./assets/algorithm.svg" alt="">
+      Algorithmus
+    </button>
+  </li>
+</ul>
+
+<router-outlet></router-outlet>
+
