--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,3 +78,31 @@ app-header {
     justify-content: flex-end;
     gap: 1rem;
 }
+
+button[type='submit'] {
+  background-color: var(--primary);
+  width: fit-content;
+  padding: 0.5rem;
+  align-self: center;
+  transition: var(--first-transition);
+}
+
+button[type='submit']:not(:disabled):hover {
+  background: linear-gradient(
+    180deg,
+    rgba(214, 166, 83, 0.3411764706),
+    rgba(143, 89, 7, 0.2470588235)
+  );
+}
+
+button[type='submit']:disabled {
+  background-color: red;
+}
+
+button[type='submit']:disabled,
+button[type='submit'][disabled] {
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+  cursor: initial;
+}
