--- a/src/app/newcustomer/newcustomer.scss
+++ b/src/app/newcustomer/newcustomer.scss
@@ -59,12 +59,11 @@ input[type="radio"] {
   appearance: none;
   background-color: #fff;
   font: inherit;
-  width: 5px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
   color: var(--secondary);
   border: 0.15em solid var(--secondary);
   border-radius: 0.15em;
-  transform: translateY(-0.075em);
   display: grid;
   place-content: center;
 }
@@ -82,4 +81,8 @@ input[type="radio"]::before {
 
 input[type="radio"]:checked::before {
   transform: scale(1);
+}
+
+textarea {
+    height: 4.375rem;
 }
