--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,4 +5,7 @@
         <app-header></app-header>
         <router-outlet></router-outlet>
     </div>
+    <app-toast
+        [ngClass]="{'show-success': stateControl.showToast,'show-error': stateControl.showError}">
+      </app-toast>
 </main>
