--- a/src/styles.scss
+++ b/src/styles.scss
@@ -106,3 +106,25 @@ button[type='submit'][disabled] {
   color: #666666;
   cursor: initial;
 }
+
+app-toast {
+  position: absolute;
+  bottom: 6.25rem;
+  right: 1.25rem;
+  background-color: var(--primary);
+  width: fit-content;
+  height: fit-content;
+  padding: 1.875rem;
+  gap: 0.625rem;
+  border-radius: 1.875rem 1.875rem 0 1.875rem;
+  box-shadow: 0px 0.375rem 0.625rem 0 #00000033;
+  opacity: 1;
+  z-index: 1;
+  transform: translateX(100%);
+  // @include firstTranistion();
+}
+
+.show-success {
+  opacity: 1;
+  transform: translateX(0);
+}
