--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,9 +108,9 @@ button[type='submit'][disabled] {
 }
 
 app-toast {
-  position: absolute;
+  position: fixed;
   bottom: 6.25rem;
-  right: 1.25rem;
+  right: 0;
   background-color: var(--primary);
   width: fit-content;
   height: fit-content;
@@ -121,7 +121,7 @@ app-toast {
   opacity: 1;
   z-index: 1;
   transform: translateX(100%);
-  // @include firstTranistion();
+  transition: var(--first-transition);
 }
 
 .show-success {
