change to really scss and new component company

--- a/src/app/settings/settings.html
+++ b/src/app/settings/settings.html
@@ -2,11 +2,17 @@
 
 <ul>
     <li>
-    <button routerLink="algorithmus" routerLinkActive="active">
-      <img width="25" height="25" src="./assets/algorithm.svg" alt="">
-      Algorithmus
-    </button>
-  </li>
+      <button routerLink="algorithmus" routerLinkActive="active">
+        <img width="25" height="25" src="./assets/algorithm.svg" alt="">
+        Algorithmus
+      </button>
+    </li>
+    <li>
+      <button routerLink="company" routerLinkActive="active">
+        <img width="25" height="25" src="./assets/algorithm.svg" alt="">
+        Firma
+      </button>
+    </li>
 </ul>
 
 <router-outlet></router-outlet>
