--- a/src/app/customers/customers.scss
+++ b/src/app/customers/customers.scss
@@ -1,4 +1,4 @@
-
+@use "./../../basic";
 
 table { 
     border-radius: 10px; 
@@ -8,7 +8,7 @@ table {
 }
 
 thead tr td {
-    background-color: var(--body-bg);
+    background-color: basic.$body-bg;
     text-align: center;
 }
 
@@ -19,7 +19,7 @@ td{
 }
 
 tr:hover td {
-    background-color: var(--body-bg);
+    background-color: basic.$body-bg;
 }
 
 tr td {
