--- a/src/app/navbar/navbar.scss
+++ b/src/app/navbar/navbar.scss
@@ -1,3 +1,5 @@
+@use "./../../basic";
+
 ul {
     display: flex;
     flex-direction: column;
@@ -17,7 +19,7 @@ ul {
             gap: 1rem;
             padding: 0.5rem;
             &:hover {
-                transition: var(--first-transition);
+                transition: basic.$first-transition;
                 background: linear-gradient(180deg, #d6a65357, #8f59073f);
             }
             img {
@@ -26,7 +28,7 @@ ul {
             }
         }
         button.active {
-            background-color: var(--primary);
+            background-color: basic.$primary;
         }
         &:nth-child(2) {
             margin-top: 1rem;
@@ -43,12 +45,12 @@ ul {
     align-items: center;
     outline: transparent;
     &:focus-visible {
-    border: 2px dotted var(--primary);
-    outline: var(--primary);
+    border: 2px dotted basic.$primary;
+    outline: basic.$primary;
     }
     img {
         &:hover {
-        filter: drop-shadow(2px 4px 6px var(--primary));
+        filter: drop-shadow(2px 4px 6px basic.$primary);
         }
     }
 }
