--- a/src/app/settings/company/company.scss
+++ b/src/app/settings/company/company.scss
@@ -1,4 +1,4 @@
-@use "./../../basic";
+@use "./../../../basic";
 
 form {
   width: 100%;
@@ -43,48 +43,4 @@ form {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
     0 0 8px var(--primary);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px basic.$primary;
-}
-
-.form-radio {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-
-.form-radio label {
-    display: flex;
-    align-items: center;
-    gap: 0.4rem;
-}
-
-input[type="radio"] {
-  appearance: none;
-  background-color: #fff;
-  font: inherit;
-  width: 20px;
-  height: 20px;
-  color: basic.$secondary;
-  border: 0.15em solid basic.$secondary;
-  border-radius: 0.15em;
-  display: grid;
-  place-content: center;
-}
-
-input[type="radio"]::before {
-  content: "";
-  width: 0.65em;
-  height: 0.65em;
-  transform: scale(0);
-  transition: basic.$first-transition;
-  box-shadow: inset 1em 1em basic.$secondary;
-  transform-origin: bottom left;
-  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
-}
-
-input[type="radio"]:checked::before {
-  transform: scale(1);
-}
-
-textarea {
-    height: 4.375rem;
 }
