--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
-@import url("./resets.css");
-@import url("./basic.css");
+@use "./resets.css";
+@use "./basic";
 
 @font-face {
   font-family: "Montserrat";
@@ -30,7 +30,7 @@ main {
     flex-direction: column;
     height: 100%;
     width: 100%;
-    background-color: var(--body-bg);
+    background-color: basic.$body-bg;
 }
 
 h1, h2, h3 {
@@ -45,8 +45,8 @@ app-header {
     display: block;
     margin: .0625rem .0625rem 0 .0625rem;
     height: 4.5rem;
-    border-right: 1px solid var(--border-color);
-    border-bottom: 1px solid var(--border-color);
+    border-right: 1px solid basic.$border-color;
+    border-bottom: 1px solid basic.$border-color;
 }
 
 app-navbar {
@@ -55,7 +55,7 @@ app-navbar {
     height: 100vh;
     width: 20rem;
     background: #ffff;
-    border-right: 1px solid var(--border-color);
+    border-right: 1px solid basic.$border-color;
     font-size: 1.25rem;
 }
 
@@ -80,11 +80,11 @@ app-header {
 }
 
 button[type='submit'] {
-  background-color: var(--primary);
+  background-color: basic.$primary;
   width: fit-content;
   padding: 0.5rem;
   align-self: center;
-  transition: var(--first-transition);
+  transition: basic.$first-transition;
 }
 
 button[type='submit']:not(:disabled):hover {
@@ -111,7 +111,7 @@ app-toast {
   position: fixed;
   bottom: 6.25rem;
   right: 0;
-  background-color: var(--primary);
+  background-color: basic.$primary;
   width: fit-content;
   height: fit-content;
   padding: 1.875rem;
@@ -121,7 +121,7 @@ app-toast {
   opacity: 1;
   z-index: 1;
   transform: translateX(100%);
-  transition: var(--first-transition);
+  transition: basic.$first-transition;
 }
 
 .show-success {
