--- a/src/app/settings/company/company.html
+++ b/src/app/settings/company/company.html
@@ -1,56 +1,97 @@
-<form [formGroup]="companyForm" novalidate>
+<section>
+      <div class="container">
+    <div class="logo">
+       <a href="/" class="logo">
+      <img width="170" height="40" src="./assets/SK-logo.svg" alt="Start in Krypto">
+    </a>
+    </div>
+    <h1>Start in Krypto</h1>
+    <p class="subtitle">Dein Einstieg in die Krypto-Welt</p>
 
+    <h2>Über Firma</h2>
+    <address class="details">
+      <dl>
+        <dt class="label">Name</dt>
+        <dd>Start in Krypto</dd>
+      </dl>
+      <dl>
+        <dt class="label">Name des Inhabers</dt>
+        <dd>Elisabeth Poloczek</dd>
+      </dl>
+      <dl>
+        <dt class="label">Straße & Nr.</dt>
+        <dd>Innovation Avenue 42</dd>
+      </dl>
+      <dl>
+        <dt class="label">Stadt & Postleitzahl</dt>
+        <dd>81549 München</dd>
+      </dl>
+    </address>
+
+    <div class="steuer">
+      <div>Steuernummer</div>
+      <div>DE987654321</div>
+    </div>
+  </div>
+
+</section>
+
+<!-- <section>     -->
+    <!-- <form [formGroup]="companyForm" novalidate> -->
+        
   <!-- Company Logo -->
-  <div class="form-group">
+  <!-- <div class="form-group">
     <label class="control-label" id="label-logo" for="logo">Firmenlogo:</label>
     <input class="form-control" type="file" id="logo" formControlName="logo" accept="image/*">
-  </div>
+    </div> -->
 
   <!-- Company Name -->
-  <div class="form-group">
+  <!-- <div class="form-group">
     <label class="control-label" id="label-companyName" for="companyName">Firmenname:</label>
     <input class="form-control" type="text" placeholder="Musterfirma GmbH" id="companyName" formControlName="companyName">
-  </div>
+   </div> -->
 
   <!-- Street -->
-  <div class="form-group">
+  <!-- <div class="form-group">
     <label class="control-label" id="label-street" for="street">Straße:</label>
     <input class="form-control" type="text" placeholder="Musterstraße" id="street" formControlName="street">
-  </div>
+  </div> -->
 
   <!-- Number -->
-  <div class="form-group">
+  <!-- <div class="form-group">
     <label class="control-label" id="label-number" for="number">Hausnummer:</label>
     <input class="form-control" type="text" placeholder="12A" id="number" formControlName="number">
-  </div>
+  </div> -->
 
   <!-- Postcode -->
-  <div class="form-group">
+  <!-- <div class="form-group">
     <label class="control-label" id="label-postcode" for="postcode">Postleitzahl:</label>
     <input class="form-control" type="text" placeholder="12345" id="postcode" formControlName="postcode">
-  </div>
-
+  </div> -->
+  
   <!-- City -->
-  <div class="form-group">
-    <label class="control-label" id="label-city" for="city">Stadt:</label>
+  <!-- <div class="form-group">
+      <label class="control-label" id="label-city" for="city">Stadt:</label>
     <input class="form-control" type="text" placeholder="Berlin" id="city" formControlName="city">
-  </div>
-
+  </div> -->
+  
   <!-- Owner Name -->
-  <div class="form-group">
-    <label class="control-label" id="label-ownerName" for="ownerName">Name des Inhabers:</label>
-    <input class="form-control" type="text" placeholder="Max Mustermann" id="ownerName" formControlName="ownerName">
-  </div>
+  <!-- <div class="form-group">
+      <label class="control-label" id="label-ownerName" for="ownerName">Name des Inhabers:</label>
+      <input class="form-control" type="text" placeholder="Max Mustermann" id="ownerName" formControlName="ownerName">
+  </div> -->
 
   <!-- Steuernummer -->
-  <div class="form-group">
-    <label class="control-label" id="label-taxNumber" for="taxNumber">Steuernummer:</label>
-    <input class="form-control" type="text" placeholder="123/4567/8901" id="taxNumber" formControlName="taxNumber">
-  </div>
+  <!-- <div class="form-group">
+      <label class="control-label" id="label-taxNumber" for="taxNumber">Steuernummer:</label>
+      <input class="form-control" type="text" placeholder="123/4567/8901" id="taxNumber" formControlName="taxNumber">
+  </div> -->
 
   <!-- Submit Button -->
-  <button type="submit" [disabled]="companyForm.invalid">
+  <!-- <button type="submit" [disabled]="companyForm.invalid">
     Speichern
-  </button>
+  </button> -->
 
-</form>
+<!-- </form> -->
+
+<!-- </section> -->
