--- a/src/app/settings/company/company.scss
+++ b/src/app/settings/company/company.scss
@@ -1,5 +1,55 @@
 @use "./../../../basic";
 
+.container {
+    max-width: 600px;
+    background-color: #fff;
+    border-radius: 12px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    padding: 30px;
+    margin: auto;
+}
+
+.logo {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+h1 {
+    text-align: center;
+    margin: 10px 0 5px;
+}
+.subtitle {
+    text-align: center;
+    color: basic.$secondary;
+    font-weight: 500;
+    margin-bottom: 30px;
+}
+h2 {
+    border-bottom: 2px solid basic.$border-color;
+    padding-bottom: 5px;
+    margin-bottom: 20px;
+}
+.details {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 12px;
+}
+.details div {
+    margin-bottom: 5px;
+}
+.label {
+    font-weight: bold;
+    color: #555;
+}
+.steuer {
+    margin-top: 20px;
+    font-weight: bold;
+    color: #555;
+}
+
+
+
+
 form {
   width: 100%;
 }
