--- a/src/app/settings/company/company.html
+++ b/src/app/settings/company/company.html
@@ -20,7 +20,7 @@
       </dl>
       <dl>
         <dt class="label">Straße & Nr.</dt>
-        <dd>Innovation Avenue 42</dd>
+        <dd>Chiemgaustr. 156</dd>
       </dl>
       <dl>
         <dt class="label">Stadt & Postleitzahl</dt>
@@ -28,10 +28,10 @@
       </dl>
     </address>
 
-    <div class="steuer">
-      <div>Steuernummer</div>
-      <div>DE987654321</div>
-    </div>
+    <dl class="steuer">
+      <dt>Steuernummer</dt>
+      <dd>DE987654321</dd>
+    </dl>
   </div>
 
 </section>
